fml/macro/tests/ui/errorful_2.stderr
error: Service trait must have only methods
 --> $DIR/errorful_2.rs:6:5
  |
6 |     type What;
  |     ^^^^^^^^^^
